--- a/web11_hcsn/src/css/index.css
+++ b/web11_hcsn/src/css/index.css
@@ -1,3 +1,7 @@
+@import url(./layout/sidebar.css);
+@import url(./layout/header.css);
+@import url(./layout/main.css);
+
 @font-face {
     font-family: Roboto Regular Font;
     src: url(../assets/UI/fonts/Roboto-Regular.ttf);
@@ -8,10 +12,18 @@
     src: url(../assets/UI/fonts/Roboto-Bold.ttf);
 }
 body {
+    font-family: Roboto Regular Font;
+    font-size: 13px;
     margin: 0;
 }
 
 .container {
-    font-family: Roboto Regular Font;
-    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100vh;
+    background-color: #f4f7ff;
 }
