--- a/web11_hcsn/src/css/layout/main.css
+++ b/web11_hcsn/src/css/layout/main.css
@@ -1,5 +1,5 @@
 .main {
-    padding: 24px 16px 0 16px;
+    padding: 14px 20px;
     width: calc(100% - 66px);
     height: calc(100% - 44px);
     display: flex;
