--- a/web11_hcsn/src/css/base/input.css
+++ b/web11_hcsn/src/css/base/input.css
@@ -2,7 +2,39 @@
   background-color: #ffffff;
   border-radius: 2.5px;
   border: 1px solid #afafaf;
-  height: 35px;
   overflow: hidden;
   margin-right: 11px;
+  text-align: center;
+}
+
+.input__search {
+    font-style: italic;
+    padding: 10px;
+}
+
+.input:hover {
+    border: 1px solid #1aa4c8;
+}
+
+.input:focus {
+    border: 1px solid #1aa4c8;
+    outline: none;
+}
+
+.input__type {
+    padding: 10px;
+}
+
+.input__details {
+    padding: 10px;
+}
+
+.input__date {
+    background-color: rgba(26, 164, 200, .2);
+border-radius: 3px;
+width: 112px;
+height: 30px;
+overflow: hidden;
+border: none;
+text-align: center;
 }
