--- a/web11_hcsn/src/css/base/icon.css
+++ b/web11_hcsn/src/css/base/icon.css
@@ -1,3 +1,5 @@
+@import url(../index.css);
+
 .icon {
     margin: 12px;
 }
@@ -41,6 +43,7 @@
     background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -287px -111px;
 	width: 18px;
 	height: 17px;
+	box-shadow: inset 0 2px 6px rgba(0, 0, 0, .16);
 }
 
 .icon__deleteProperty {
@@ -53,6 +56,7 @@
     background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -204px -424px;
 	width: 8px;
 	height: 8px;
+	font-family: Roboto Regular Font;
 }
 
 .icon__search {
