--- a/web11_hcsn/src/css/layout/main.css
+++ b/web11_hcsn/src/css/layout/main.css
@@ -6,5 +6,17 @@
     flex-direction: column;
     box-sizing: border-box;
     position: relative;
-    overflow-y: hidden;
-  }
+    /* overflow-y: hidden; */
+   }
+
+.text-align--center {
+  text-align: center;
+}
+
+.text-align--left {
+  text-align: left;
+}
+
+.text-align--right {
+  text-align: right;
+}
