--- a/web11_hcsn/src/css/base/propery_details.css
+++ b/web11_hcsn/src/css/base/propery_details.css
@@ -20,7 +20,7 @@
   .dialog__header {
     display: flex;
     justify-content: space-between;
-    padding: 20px 0 20px 16px;
+    padding: 20px 0 12px 16px;
     align-items: center;
   }
 
@@ -31,8 +31,15 @@
     margin-right: 16px;
   }
 
+  .icon__close:hover{
+    cursor: pointer;
+  }
+
+  
+
   .dialog__body {
     padding: 0 0 20px 16px;
+    display: flex;
   }
 
   .form__left {
@@ -56,4 +63,88 @@
     color: red;
   }
 
+  .row {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .col {
+    display: flex;
+    flex-direction: column;  
+    margin-right: 16px;
+  }
+
+  .col1{
+    margin-right: 16px;
+  }
+  .col2 {
+    flex: 1;
+    margin-right: 16px;
+  }
  
+  .row1 {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  #row2a {
+     margin-right: 16px;
+  }
+
+  .row2 input {
+    width: 95%;
+  }
+
+  .row {
+    margin: 8px 0;
+  }
+
+  .row input:hover{
+    border: 1px solid #1aa4c8;
+    
+  }
+
+  .row input:focus{
+    outline: none !important;
+  
+    border: 1px solid #1aa4c8;
+  }
+  input {
+    margin-top: 8px;
+    height: 22px;
+  }
+
+  .dialog__footer {
+    background-color: #f8f8f8;
+    height: 52px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .btn {
+    border-radius: 3px;
+ height: 36px;
+overflow: hidden;
+margin-right: 10px;
+padding: 10px;
+  }
+
+  .save__btn{
+    background-color: #1aa4c8;
+    color: #fff;
+    border: 1px solid #1aa4c8;    
+    margin-right: 36px;
+    padding: 0 30px;
+  }
+
+  .delete__btn {
+    border: none;
+    background-color: #fff;
+    margin-right: 10px;
+    padding: 0 30px;
+  }
+
+  .save__btn, .delete__btn:hover{
+    cursor: pointer;
+  }
