--- a/web11_hcsn/src/css/base/propery_details.css
+++ b/web11_hcsn/src/css/base/propery_details.css
@@ -1,150 +1,228 @@
 .dialog {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.626);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.626);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .dialog-wrapper {
-    position: absolute;
-    width: 600px;
-    height: auto;
-    background-color: #fff;
-    border-radius: 4px;
-  }
-  .dialog__header {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 0 12px 16px;
-    align-items: center;
-  }
+.dialog-wrapper {
+  position: absolute;
+  width: 600px;
+  height: auto;
+  background-color: #fff;
+  border-radius: 4px;
+}
+.dialog__header {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0 12px 16px;
+  align-items: center;
+}
 
-  .icon__close {
-    background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -375px -287px;
+
+.icon__close {
+  background: url("../../assets/UI/icon/qlts-icon.svg") no-repeat -375px -287px;
+  width: 18px;
+  height: 18px;
+  margin-right: 16px;
+}
+
+.icon__close:hover {
+  cursor: pointer;
+}
+
+.dialog__body {
+  padding: 0 0 20px 16px;
+  display: flex;
+}
+
+.form__left {
+  display: flex;
+  flex-direction: column;
+  margin-right: 16px;
+}
+
+.form__mid {
+  display: flex;
+  flex-direction: column;
+  margin-right: 16px;
+}
+
+.form__right {
+  display: flex;
+  flex-direction: column;
+}
+
+span {
+  color: red;
+}
+
+.row {
+  display: flex;
+  flex-direction: column;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+  margin-right: 16px;
+}
+
+.col1 {
+  margin-right: 16px;
+}
+.col2 {
+  flex: 1;
+  margin-right: 16px;
+}
+
+.row1 {
+  display: flex;
+  justify-content: space-between;
+}
+
+#row2a {
+  margin-right: 16px;
+}
+
+.row2 input {
+  width: 95%;
+}
+
+.row {
+  margin: 8px 0;
+}
+
+.row {
+  position: relative;
+}
+
+.row input:hover {
+  border-color:  #1aa4c8;
+  border-radius: 3.5px;
+}
+
+.row input:focus {
+  outline: none !important;
+  border-radius: 3.5px;
+  border-color: #1aa4c8;
+}
+
+input {
+  margin-top: 8px;
+  height: 22px;
+  padding: 2px 6px;
+  border-radius: 3.5px;
+  border: 1px solid #ccc;
+}
+
+select {
+  margin-top: 8px;
+  height: 22px;
+  padding: 2px 6px;
+}
+
+.dialog__footer {
+  background-color: #f8f8f8;
+  height: 52px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.btn {
+  border-radius: 3px;
+  height: 36px;
+  overflow: hidden;
+  margin-right: 10px;
+  padding: 10px;
+}
+
+.save__btn {
+  background-color: #1aa4c8;
+  color: #fff;
+  border: 1px solid #1aa4c8;
+  margin-right: 36px;
+  padding: 0 30px;
+}
+
+.delete__btn {
+  border: 1px solid #E6E6E6;
+  background-color: #fff;
+  margin-right: 10px;
+  padding: 0 30px;
+}
+
+.save__btn:hover {
+  background-color: #28b7dc;
+  cursor: pointer;
+}
+
+.delete__btn:hover {
+  cursor: pointer;
+}
+
+.row22 {
+  display: flex;
+  flex-direction: column;
+}
+.row22 input {
+  width: 170px;
+}
+
+.rowb {
+  margin: 8px 0;
+}
+
+.rowb1 input {
+  width: 170px;
+}
+
+.arr-down {
+  background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -72px -338px;
+	width: 8px;
+	height: 5px;
+  right: 5px;
+  position: absolute;
+  bottom: 20%;
+}
+
+.arr {
+  background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -204px -332px;
+	width: 8px;
+	height: 16px;
+  right: 5px;
+  position: absolute;
+  bottom: 10%;
+}
+
+.datepicker {
+  background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -287px -67px;
 	width: 18px;
 	height: 18px;
-    margin-right: 16px;
-  }
+  position: absolute;
+  right: 5px;
+  bottom: 10%;
+}
 
-  .icon__close:hover{
-    cursor: pointer;
-  }
+.datepicker1 {
+  background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -287px -67px;
+	width: 18px;
+	height: 18px;
+  position: absolute;
+  left: 42%;
+  bottom: 10%;
+}
 
-  
+input:hover {
+  cursor: pointer;
+}
 
-  .dialog__body {
-    padding: 0 0 20px 16px;
-    display: flex;
-  }
-
-  .form__left {
-    display: flex;
-    flex-direction: column;
-    margin-right: 16px;
-  }
-
-  .form__mid {
-    display: flex;
-    flex-direction: column;
-    margin-right: 16px;
-  }
-
-  .form__right {
-    display: flex;
-    flex-direction: column;
-  }
-
-  span {
-    color: red;
-  }
-
-  .row {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .col {
-    display: flex;
-    flex-direction: column;  
-    margin-right: 16px;
-  }
-
-  .col1{
-    margin-right: 16px;
-  }
-  .col2 {
-    flex: 1;
-    margin-right: 16px;
-  }
- 
-  .row1 {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #row2a {
-     margin-right: 16px;
-  }
-
-  .row2 input {
-    width: 95%;
-  }
-
-  .row {
-    margin: 8px 0;
-  }
-
-  .row input:hover{
-    border: 1px solid #1aa4c8;
-    
-  }
-
-  .row input:focus{
-    outline: none !important;
-  
-    border: 1px solid #1aa4c8;
-  }
-  input {
-    margin-top: 8px;
-    height: 22px;
-  }
-
-  .dialog__footer {
-    background-color: #f8f8f8;
-    height: 52px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .btn {
-    border-radius: 3px;
- height: 36px;
-overflow: hidden;
-margin-right: 10px;
-padding: 10px;
-  }
-
-  .save__btn{
-    background-color: #1aa4c8;
-    color: #fff;
-    border: 1px solid #1aa4c8;    
-    margin-right: 36px;
-    padding: 0 30px;
-  }
-
-  .delete__btn {
-    border: none;
-    background-color: #fff;
-    margin-right: 10px;
-    padding: 0 30px;
-  }
-
-  .save__btn, .delete__btn:hover{
-    cursor: pointer;
-  }
+.disabled {
+  pointer-events: none;
+}
