--- a/web11_hcsn/src/css/base/table.css
+++ b/web11_hcsn/src/css/base/table.css
@@ -1,90 +1,9 @@
-/* table {
-  background-color: #ffffff;
-  border-radius: 3.5px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.16);
-  border-collapse: collapse;
-  min-width: 100%;
-  border: 1px solid #afafaf;
-  overflow: hidden;
-}
-
-.row__head {
-  height: 38px;
-  background-color: #f5f5f5;
-}
-
-.row__head:hover {
-    cursor: pointer;
-}
-
-.row__head th {
-  text-align: left;
-  font-size: 13px;
-  font-weight: 700;
-}
-
-.row__body {
-  height: 40px;
-  background-color: #fff;
-}
-
-.row__body:hover {
-    cursor: pointer;
-    background-color: rgba(26, 164, 200, .2);
-}
-
-.checkbox {
-  padding-left: 16px;
-  padding-right: 20px;
-}
-.checkbox__ip {
-  color: #090f39;
-  width: 14px;
-  height: 14px;
-  border: 1px solid black;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-.row__head th {
-  padding: 0 10px;
-}
-
-.row__body td {
-  padding: 0 10px;
-}
-
-#amount {
-  text-align: right;
-}
-
-.icon__show {
-  display: flex;
-  align-items: center;
-}
-
-.icon__edit {
-  background: url("../../assets/UI/icon/qlts-icon.svg") no-repeat -156px -68px;
-  width: 16px;
-  height: 16px;
-  margin: 0 5px;
-}
-
-.icon__delete {
-  background: url("../../assets/UI/icon/qlts-icon.svg") no-repeat -244px -112px;
-  width: 16px;
-  height: 16px;
-  margin: 0 5px;
-} */
 .page {
   width: 100%;
   height: 100%;
 }
 
 .main__table {
-  
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -109,27 +28,35 @@
 table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #E0E1E4;
+  border: 1px solid #e0e1e4;
 }
 
 tr {
-  border-bottom: 1px solid #E0E1E4;
+  border-bottom: 1px solid #e0e1e4;
   height: 40px;
+  background-color: #fff;
 }
 
-td, th {
+tr:hover {
+  background-color: #e5f3ff;
+}
+
+td,
+th {
   padding-left: 17px;
-  
 }
 
-th{
+th {
   position: sticky;
   top: 0;
   background-color: #f5f5f5;
 }
 
 td {
-  background-color: #fff;
+  max-width: 180px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .paging__left {
@@ -148,10 +75,9 @@ td {
   width: 59px;
   height: 25px;
   overflow: hidden;
-  
 }
 
-.paging__right{
+.paging__right {
   display: flex;
   align-items: center;
 }
@@ -163,6 +89,11 @@ td {
 .icon {
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.icon:hover {
+  cursor: pointer;
 }
 
 .icon__show {
@@ -187,3 +118,49 @@ tr:hover .icon__show {
   height: 16px;
   margin: 0 5px;
 }
+
+.page__amount {
+  font-size: 11px;
+}
+
+.list__pages {
+  display: flex;
+  align-items: center;
+
+}
+
+.arr:hover {
+  cursor: pointer;
+}
+
+.arr--left {
+  background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -206px -248px;
+	width: 5px;
+	height: 8px;
+  margin-right: 18px !important;
+}
+
+.arr-right {
+  background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -250px -248px;
+	width: 5px;
+	height: 8px;
+  margin-left: 18px !important;
+  margin-right: 0 !important;
+}
+
+.array {
+  display: flex;
+  align-items: center;
+  margin-right: 5px !important;
+}
+
+.array span {
+  margin: 0 5px;
+}
+.etc {
+  background: url('../../assets/UI/icon/qlts-icon.svg') no-repeat -422px -31px;
+	width: 13px;
+	height: 3px;
+}
+
+ 
